--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,17 +14,23 @@
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, 'Roboto', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    background-color: black;
+}
+
+
 /* container */
 
 #container {
-    width:90%;
+    width:1027px;
     margin:auto;
+    background:white;
 }
 
 
 /* header */
-header {padding:10px 0;text-align:center;}
-header #logo {width:40%;}
+header {padding:25px 0;text-align:center;}
+header #logo {width:25%;}
 
 /* section 1 - banner principal*/
 #s1 #banner {
@@ -34,7 +40,8 @@ header #logo {width:40%;}
 /* section 2 - register_forms */
 #s2 {
     text-align:center;
-    margin:30px 10px;
+    margin:120px 10px;
+    font-size:25px;
 }
 
 #s2 .row {
@@ -73,6 +80,7 @@ header #logo {width:40%;}
     font-weight:bold;
     border-radius:15px;
     margin-top:30px;
+    font-size:25px;
 }
 
 .btn_cadastrar:hover {
@@ -80,17 +88,50 @@ header #logo {width:40%;}
 }
 
 
-/* section 2 - register_forms */
+/* section 3 - payment_methods */
+#s3 {
+    text-align: center;
+    background: black;
+    padding-left:50px;
+    padding-right:50px;
+    font-size:25px;
+}
 
-/* section 3 - veja */
+#s3 {color: white;padding-top:100px;padding-bottom:20px;}
+#s3 u{color: #D5E18D;text-decoration-color:#FF3900;}
+#s3 h2:nth-child(2) {color:#FF3900;margin-top:30px;padding-top:40px;padding-bottom:80px;}  
 
 /* section 4 - payment_methods */
+#s4 {margin:40px 0; text-align: center;padding-top:70px;padding-bottom:70px;}
+#s4 img {width:80%;margin:15px 5px;}
+#s4 .col {width: 200px;display:inline-block;}
 
 /* section 5 - logo 2 */
+#s5{background-color:#FF3900;text-align:center;padding:10px 5px;}
+#s5 img{width:30px;}
+#s5 i{font-weight:bold;color:white;font-size:25px;position:relative;top:-8px;}
 
-/* section 7 - 2_asides */
+/* section 6 - 2_asides */
+#s6{padding-top:80px;}
+#s6 aside{width:50%;float:left;text-align:center;margin:30px 0;}
+#s6 .row{width:80%;margin:auto;}
+#s6 .row img {margin:20px 0;}
 
 /* footer */
+footer {
+    margin-top:100px;
+    text-align:center;
+    background-color:#FF3900;
+    padding-right:40px;
+    padding-left:40px;
+    color: white;
+    padding-top:30px;
+    padding-bottom:30px;
+
+}
+
+footer hr {border-color:yellow; width:20%; margin-left:auto;margin-right:auto;margin-top:20px;margin-bottom:20px;}
+
 
 
 /* guarantee layout fluid */
