--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,7 +15,9 @@
 }
 
 body {
-    background-color: black;
+    background: url('../img/bg.jpg');
+    background-size:cover;
+    background-attachment: fixed;
 }
 
 
@@ -33,8 +35,37 @@ header {padding:25px 0;text-align:center;}
 header #logo {width:25%;}
 
 /* section 1 - banner principal*/
+#s1{
+    width:100%;
+    position:relative;
+}
+
 #s1 #banner {
     width:100%;
+}
+
+#s1 button {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    background-color:#fa3b07;
+    border:none;
+    color:white;
+    font-size: 35px;
+    font-weight:bold;
+    position: absolute;
+    bottom:10px;
+    left:260px;
+    transition:0.3s;
+}
+
+#s1 button:hover {
+    width:300px;
+    height:300px;
+    cursor:pointer;
+    transition:0.3s;
+    text-decoration:underline;
+    text-decoration-color:#D5E18D;
 }
 
 /* section 2 - register_forms */
@@ -65,6 +96,9 @@ header #logo {width:25%;}
 
 #s2 img:hover {
     cursor:pointer;
+    transition:0.3s;
+    width:80%;
+    height:70%;
 }
 
 #s2 u{
@@ -75,16 +109,21 @@ header #logo {width:25%;}
 .btn_cadastrar {
     background-color: #FF3900;
     border:none;
-    padding:15px 15px;
+    padding:15px 35px;
     color:white;
     font-weight:bold;
     border-radius:15px;
-    margin-top:30px;
+    margin-top:100px;
+    margin-bottom:50px;
     font-size:25px;
+    transition:0.5s;
 }
 
 .btn_cadastrar:hover {
     cursor:pointer;
+    text-decoration: underline;
+    text-decoration-color:#D5E18D;
+    transition:0.5s;
 }
 
 
@@ -116,6 +155,8 @@ header #logo {width:25%;}
 #s6 aside{width:50%;float:left;text-align:center;margin:30px 0;}
 #s6 .row{width:80%;margin:auto;}
 #s6 .row img {margin:20px 0;}
+
+#s6 u {color:#D5E18D;text-decoration-color:#fa3b07;}
 
 /* footer */
 footer {
