--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,6 +44,16 @@ header #logo {width:25%;}
     width:100%;
 }
 
+@keyframes big_small {
+    0% {
+        transform: scale(5px, 5px);
+    }
+
+    100% {
+        transform: scale(10px, 10px);
+    }
+}
+
 #s1 button {
     width: 280px;
     height: 280px;
@@ -57,7 +67,10 @@ header #logo {width:25%;}
     bottom:10px;
     left:260px;
     transition:0.3s;
+   
 }
+
+
 
 #s1 button:hover {
     width:300px;
